# Gradtuity

./: .gitignore  README.md  find_libcuda.sh  find_libcudart.sh  find_libnccl.sh  find_libnvrtc.sh  pyproject.toml  setup.sh
demos/: demo_checkpoint.py  demo_mnist.py  demo_mnist_cnn.py  demo_mnist_dist.py  demo_mnist_mlp.py  demo_moons.py  demo_tokenizer.py  demo_train.py
gpt2/: __init__.py  data_pipeline.py  dataset.py  make_test_data.py  model.py  train.py
gradtuity/: __init__.py  checkpoint.py  cuda_driver.py  cuda_mem.py  functional.py  kernels.py  launch.py  nn.py  optim.py  random.py  tensor.py  tensor_io.py
gradtuity/bench/: __init__.py  __main__.py  runner.py  specs.py
gradtuity/kernels/: __init__.py  conv_kernels.py  elemwise_kernels.py  gather_kernels.py  loss_kernels.py  mask_kernels.py  matmul_kernels.py  one_hot_kernels.py  optim_kernels.py  pool_kernels.py  reduce_kernels.py  softmax_kernels.py
gradtuity/kernels_cuda/: __init__.py  conv_kernels.py  dropout_kernels.py  elemwise_kernels.py  gather_kernels.py  layernorm_kernels.py  loss_kernels.py  mask_kernels.py  matmul_kernels.py  one_hot_kernels.py  optim_kernels.py  pool_kernels.py  reduce_kernels.py  softmax_kernels.py
gradtuity/kernels_triton/: conv_kernels.py  dropout_kernels.py  layernorm_kernels.py  softmax_kernels.py
gradtuity/optim/: __init__.py  utils.py
gradtuity/tests/: __init__.py  _helpers.py  conftest.py  dist_worker.py  test_attention.py  test_causal_mask.py  test_checkpoint.py  test_cuda_driver.py  test_cuda_mem.py  test_dist.py  test_dropout.py  test_embedding.py  test_nn.py  (+13 more)
(+4 files in other folders)
