[project]
name = "gradtuity"
version = "0.1.0"
description = "From-scratch tensor autodiff engine with Triton GPU kernels (CUDA, float32). Minimal PyTorch-like API for building and training small neural nets on GPU."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "torch>=2.10.0",
    "triton>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest>=9.0.2",
    "ipykernel>=7.1.0",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
]
