[project]
name = "gradtuity"
version = "0.1.0"
description = "From-scratch tensor autograd engine with Triton GPU kernels (CUDA, float32). Minimal PyTorch-like API for building and training small neural nets on GPU."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "torch>=2.10.0",
    "triton>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest>=9.0.2",
    "ipykernel>=7.1.0",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "datasets>=4.5.0",
    "tqdm>=4.67.0",
    "tiktoken>=0.8.0",
]

[tool.pytest.ini_options]
markers = [
    "requires_cuda: mark test as requiring CUDA runtime",
    "requires_triton: mark test as requiring Triton (active CUDA GPU)",
    "requires_nccl: mark test as requiring NCCL library",
    "requires_multigpu: mark test as requiring at least 2 GPUs",
]
